# npr-analysis

./: BuildOutput.txt  CMakeLists.txt  Makefile  README.md  Zq.cpp  Zq.h  amputate.cpp  amputate.h  build.sh  contraction.h  data.cpp  data.h  evaluate.cpp  evaluate.h  jackknife.h  list_exceptional_momenta.py  main.cpp  metadata.h  momentum_scale.py  msbar.cpp  msbar.h  operator.cpp  operator.h  output.h  parity.cpp  parity.h  parse_matrix_with_error.py  projector.cpp  projector.h  scale.py  subtraction.cpp  subtraction.h  tree.cpp  tree.h  util.cpp  util.h
data/: CMakeLists.txt  Makefile  compare.cpp  debug.cpp  debug.h  fierz.h  format.h  greg.cpp  io.cpp  io.h  main.cpp  merge.cpp  rabbott.cpp  raw.cpp  ziyuan.cpp
data/greg/: CMakeLists.txt  DoubleWilsonMatrix.cpp  DoubleWilsonMatrix.h  WilsonMatrix.cpp  WilsonMatrix.h  convert.hpp  util.cpp  util.h
evaluate/: CMakeLists.txt  fourq_op_fourq_ext.cpp  fourq_op_twoq_ext.cpp  twoq_op_fourq_ext.cpp  twoq_op_twoq_ext.cpp
tests/: CMakeLists.txt  test_fierz.cpp  test_freeprop.cpp  test_jackknife.cpp
